--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 //Config
 PORT=3000
-HOST=
+HOST=127.9.63.7
 
 //Mongo
-DB_USER=
-DB_PASSWORD=
-DB_HOST= 
-DB_NAME=
-DB_PORT=
+DB_USER=root
+DB_PASSWORD=root
+DB_HOST=dbzoo.yjgbw2a.mongodb.net
+DB_NAME=db_zoo
+DB_PORT=27017
