--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js",
-    "test-mongodb": "node test/test-mongodb.js"
+    "start": "node app.js"
   },
   "keywords": [
     "zoo",
@@ -19,12 +18,15 @@
     "species",
     "enclosures",
     "visitors",
-    "purchases"],
+    "purchases"
+  ],
   "author": "David Pérez Numa, Santiago Bernal",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.10.1",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0"
   },
